<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/rider_linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/driver_bottom_sheet_background"
    android:padding="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/green_rect">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:alpha="0.2"
            android:background="@drawable/cardmapbg"/>

        <TextView
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Order Info"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rider_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/theme"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/start_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rider_username"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/destination_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_place"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/total_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/destination_place"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="12sp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:layout_marginTop="10dp"
        android:text="comfirm"
        android:textSize="16sp"
        android:textColor="@color/white"/>

</LinearLayout>