<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet_open_requests"
    app:behavior_hideable="true"
    app:behavior_peekHeight="70dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <com.example.font.TextViewSFProDisplaySemibold
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="OPEN REQUEST"
        android:gravity="center"
        android:textColor="@color/paymentBackground"
        android:textSize="16sp"

        android:background="@drawable/gray_rect"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/open_requests_list"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/paymentBackground"
        android:padding="4dp"
        android:scrollbars="vertical" />

</LinearLayout>